src/test/ui/consts/miri_unleashed/const_refers_to_static.stderr
error[E0080]: erroneous constant used
  --> $DIR/const_refers_to_static.rs:25:5
   |
LL |     MUTATE_INTERIOR_MUT;
   |     ^^^^^^^^^^^^^^^^^^^ referenced constant has errors

error[E0080]: erroneous constant used
  --> $DIR/const_refers_to_static.rs:27:5
   |
LL |     READ_INTERIOR_MUT;
   |     ^^^^^^^^^^^^^^^^^ referenced constant has errors

error[E0080]: erroneous constant used
  --> $DIR/const_refers_to_static.rs:29:5
   |
LL |     READ_MUT;
   |     ^^^^^^^^ referenced constant has errors

warning: skipping const checks
   |
help: skipping check that does not even have a feature gate
  --> $DIR/const_refers_to_static.rs:13:5
   |
LL |     FOO.fetch_add(1, Ordering::Relaxed)
   |     ^^^
help: skipping check that does not even have a feature gate
  --> $DIR/const_refers_to_static.rs:13:5
   |
LL |     FOO.fetch_add(1, Ordering::Relaxed)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: skipping check that does not even have a feature gate
  --> $DIR/const_refers_to_static.rs:18:17
   |
LL |     unsafe { *(&FOO as *const _ as *const usize) }
   |                 ^^^
help: skipping check that does not even have a feature gate
  --> $DIR/const_refers_to_static.rs:22:32
   |
LL | const READ_MUT: u32 = unsafe { MUTABLE };
   |                                ^^^^^^^
help: skipping check that does not even have a feature gate
  --> $DIR/const_refers_to_static.rs:22:32
   |
LL | const READ_MUT: u32 = unsafe { MUTABLE };
   |                                ^^^^^^^

error: aborting due to 3 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0080`.
